--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -28,6 +28,8 @@
   <% end %>
 <% end %>
 
+<%= link_to "Back", boards_path %>
+
 <script>
   window.addEventListener("DOMContentLoaded", (event) => {
     const cells = document.querySelectorAll("[data-toggle-selected]");
